Added a base html for client make payment view

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
       <link rel="stylesheet" href="app/corporate/corporate.css">
       <link rel="stylesheet" href="app/customer/customer.css">
       <link rel="stylesheet" href="app/customer/myEvents/myEvents.css">
+      <link rel="stylesheet" href="app/customer/partials/makePayment/makePayment.css">
       <link rel="stylesheet" href="app/links/links.css">
       <link rel="stylesheet" href="app/liveGallery/liveGallery.css">
       <link rel="stylesheet" href="app/main/main.css">
