--- a/client/app/reservations/reservations.html
+++ b/client/app/reservations/reservations.html
@@ -5,51 +5,54 @@
 </div>
 <br>
 <div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            <div class="well well-sm">
-                <form name="form" class="form-horizontal" ng-submit="form.$valid && submit()">
-                    <fieldset>
-                        <legend class="text-center header">Contact us</legend>
-                        <p class="text-center" ng-if="emailSuccess">
-                          Your email has been successfully send.  Thank you!
-                        </p>
-                        <p class="text-center" ng-if="emailError">
-                          Oops!  An error occured while sending your email.
-                        </p>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
-                            <div class="col-md-8">
-                                <input id="fname" name="name" type="text" placeholder="First Name" class="form-control" ng-model="fname" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
-                            <div class="col-md-8">
-                                <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control" ng-model="lname" required>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon fa-2x"></i></span>
-                            <div class="col-md-8">
-                                <input id="email" name="email" type="text" placeholder="Email Address" class="form-control" ng-model="email" required>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon fa-2x"></i></span>
-                            <div class="col-md-8">
-                                <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control" ng-model="phone" required>
-                            </div>
-                        </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="well well-sm">
+        <form name="form" class="form-horizontal" ng-submit="form.$valid && submit()">
+          <fieldset>
+            <legend class="text-center header">Contact us</legend>
+            <p class="text-center" ng-if="emailSuccess">
+              Your email has been successfully send.  Thank you!
+            </p>
+            <p class="text-center" ng-if="emailError">
+              Oops!  An error occured while sending your email.
+            </p>
+            <div class="form-group">
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
+              <div class="col-md-8">
+                <input id="fname" name="name" type="text" placeholder="First Name" class="form-control" ng-model="fname" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon fa-2x"></i></span>
+              <div class="col-md-8">
+                <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control" ng-model="lname" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon fa-2x"></i></span>
+              <div class="col-md-8">
+                <input id="email" name="email" type="text" placeholder="Email Address" class="form-control" ng-model="email" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon fa-2x"></i></span>
+              <div class="col-md-8">
+                <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control" ng-model="phone" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-calendar fa-calendar-square bigicon fa-2x"></i></span>
+              <div class="col-md-8">
+                <input id="edate" name="edate" type="text" onfocus="(this.type='date')" placeholder="Event Date" class="form-control" ng-model="edate" required>
+              </div>
+            </div>
             <div class="form-group">
               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon fa-2x"></i></span>
               <div class="col-md-8">
                 <textarea class="form-control" id="message" name="message" placeholder="Enter your message for us here. We will get back to you within 2 business days." rows="7" ng-model="message"></textarea>
               </div>
             </div>
-
             <div class="form-group">
               <div class="col-md-8 text-center">
                 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
@@ -83,6 +86,7 @@
         <li><strong>Saturday</strong> - by appointment</li>
         <li><strong>Sunday</strong> - Closed</li>
       </ul>
+
     </div>
   </div>
 </div>
