commented out local src links

--- a/client/index.html
+++ b/client/index.html
@@ -110,7 +110,7 @@
       <script src="https://cdn.jsdelivr.net/npm/google-maps-utility-library-v3-keydragzoom@2.0.9/dist/keydragzoom.min.js" charset="utf-8"></script>
       <script src="https://cdn.jsdelivr.net/npm/googlemaps-rich-marker-web@1.0.2/src/richmarker.min.js" charset="utf-8"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.4.1/angular-google-maps.min.js" charset="utf-8"></script>
-      <script src="bower_components/jquery/dist/jquery.js"></script>
+      <!-- <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-resource/angular-resource.js"></script>
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -131,7 +131,7 @@
       <script src="bower_components/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
       <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
       <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
-      <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+      <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script> -->
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
