--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
       <link rel="stylesheet" href="app/admin/partials/adminNav/adminNav.css">
       <link rel="stylesheet" href="app/admin/partials/createContractor/createContractor.css">
       <link rel="stylesheet" href="app/admin/partials/createEvent/createEvent.css">
+      <link rel="stylesheet" href="app/admin/partials/createPayment/createPayment.css">
       <link rel="stylesheet" href="app/admin/partials/deleteUserPage/deleteUserPage.css">
       <link rel="stylesheet" href="app/admin/partials/manageClients/manageClients.css">
       <link rel="stylesheet" href="app/admin/partials/manageClients/manageClientsModal/manageClientsModal.css">
@@ -41,6 +42,8 @@
       <link rel="stylesheet" href="app/admin/partials/manageEvent/manageEventModal/manageEventModal.css">
       <link rel="stylesheet" href="app/admin/partials/manageLinks/manageLinks.css">
       <link rel="stylesheet" href="app/admin/partials/manageLinks/manageLinksModal/manageLinksModal.css">
+      <link rel="stylesheet" href="app/admin/partials/managePayment/managePayment.css">
+      <link rel="stylesheet" href="app/admin/partials/managePayment/managePaymentModal/managePaymentModal.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/celebrations/celebrations.css">
       <link rel="stylesheet" href="app/client/client.css">
@@ -74,6 +77,8 @@
     <navbar></navbar>
     <div ui-view=""></div>
     <footer></footer>
+
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -123,7 +128,7 @@
       <script src="app/client/client.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/client/client.router.js"></script>
+      <script src="app/celebrations/celebrations.js"></script>
       <script src="app/account/login/resetModal/resetModal.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
@@ -136,6 +141,8 @@
       <script src="app/admin/partials/createContractor/createContractor.js"></script>
       <script src="app/admin/partials/createEvent/createEvent.controller.js"></script>
       <script src="app/admin/partials/createEvent/createEvent.js"></script>
+      <script src="app/admin/partials/createPayment/createPayment.controller.js"></script>
+      <script src="app/admin/partials/createPayment/createPayment.js"></script>
       <script src="app/admin/partials/deleteUserPage/deleteUserPage.controller.js"></script>
       <script src="app/admin/partials/deleteUserPage/deleteUserPage.js"></script>
       <script src="app/admin/partials/manageClients/manageClients.controller.js"></script>
@@ -154,14 +161,18 @@
       <script src="app/admin/partials/manageLinks/manageLinks.js"></script>
       <script src="app/admin/partials/manageLinks/manageLinksModal/manageLinksModal.controller.js"></script>
       <script src="app/admin/partials/manageLinks/manageLinksModal/manageLinksModal.js"></script>
+      <script src="app/admin/partials/managePayment/managePayment.controller.js"></script>
+      <script src="app/admin/partials/managePayment/managePayment.js"></script>
+      <script src="app/admin/partials/managePayment/managePaymentModal/managePaymentModal.controller.js"></script>
+      <script src="app/admin/partials/managePayment/managePaymentModal/managePaymentModal.js"></script>
       <script src="app/admin/partials/signup/signup.controller.js"></script>
       <script src="app/admin/partials/signup/signup.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/celebrations/celebrations.controller.js"></script>
-      <script src="app/celebrations/celebrations.js"></script>
+      <script src="app/aboutus/aboutus.js"></script>
       <script src="app/client/client.controller.js"></script>
       <script src="app/account/account.js"></script>
-      <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/client/client.router.js"></script>
       <script src="app/client/partials/clientContent/clientContent.directive.js"></script>
       <script src="app/client/partials/clientNav/clientNav.directive.js"></script>
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
