added https to links in code

--- a/client/index.html
+++ b/client/index.html
@@ -105,7 +105,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/api-check/7.5.5/api-check.min.js" charset="utf-8"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-simple-logger/0.1.7/angular-simple-logger.min.js" charset="utf-8"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/markerclustererplus/2.1.4/markerclusterer.min.js" charset="utf-8"></script>
-      <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js" charset="utf-8"></script>
+      <script src="https://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js" charset="utf-8"></script>
       <script src="https://cdn.jsdelivr.net/npm/google-maps-infobox@1.1.15/infobox-module.min.js" charset="utf-8"></script>
       <script src="https://cdn.jsdelivr.net/npm/google-maps-utility-library-v3-keydragzoom@2.0.9/dist/keydragzoom.min.js" charset="utf-8"></script>
       <script src="https://cdn.jsdelivr.net/npm/googlemaps-rich-marker-web@1.0.2/src/richmarker.min.js" charset="utf-8"></script>
