file structure for myEvent link, connects now

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
       <link rel="stylesheet" href="app/client/client.css">
       <link rel="stylesheet" href="app/client/partials/clientNav/clientNav.css">
       <link rel="stylesheet" href="app/client/partials/makePayment/makePayment.css">
+      <link rel="stylesheet" href="app/client/partials/manageEvent/manageEvent.css">
       <link rel="stylesheet" href="app/client/partials/welcome/welcome.css">
       <link rel="stylesheet" href="app/client/partials/welcome/welcomeModal/welcomeModal.css">
       <link rel="stylesheet" href="app/corporate/corporate.css">
@@ -130,7 +131,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/client/partials/welcome/welcomeModal/welcomeModal.controller.js"></script>
+      <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -172,9 +173,11 @@
       <script src="app/client/partials/clientNav/clientNav.directive.js"></script>
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
       <script src="app/client/partials/makePayment/makePayment.js"></script>
+      <script src="app/client/partials/manageEvent/manageEvent.controller.js"></script>
+      <script src="app/client/partials/manageEvent/manageEvent.js"></script>
       <script src="app/client/partials/welcome/welcome.controller.js"></script>
-      <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/client/partials/welcome/welcomeModal/welcomeModal.controller.js"></script>
       <script src="app/client/partials/welcome/welcomeModal/welcomeModal.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
