--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/celebrations/celebrations.css">
       <link rel="stylesheet" href="app/client/client.css">
+      <link rel="stylesheet" href="app/client/partials/addGuest/addGuest.css">
       <link rel="stylesheet" href="app/client/partials/clientNav/clientNav.css">
       <link rel="stylesheet" href="app/client/partials/makePayment/makePayment.css">
       <link rel="stylesheet" href="app/client/partials/manageGuestList/manageGuestList.css">
@@ -131,7 +132,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/client/partials/welcome/welcome.controller.js"></script>
+      <script src="app/client/partials/manageGuestList/manageGuestList.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -170,13 +171,15 @@
       <script src="app/client/client.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/client/client.router.js"></script>
+      <script src="app/client/partials/addGuest/addGuest.controller.js"></script>
+      <script src="app/client/partials/addGuest/addGuest.js"></script>
       <script src="app/client/partials/clientContent/clientContent.directive.js"></script>
       <script src="app/client/partials/clientNav/clientNav.directive.js"></script>
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
       <script src="app/client/partials/makePayment/makePayment.js"></script>
       <script src="app/client/partials/manageGuestList/manageGuestList.controller.js"></script>
-      <script src="app/client/partials/manageGuestList/manageGuestList.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/client/partials/welcome/welcome.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/client/partials/welcome/welcomeModal/welcomeModal.controller.js"></script>
       <script src="app/client/partials/welcome/welcomeModal/welcomeModal.js"></script>
