--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,16 @@
       <link rel="stylesheet" href="app/rentals/rentals.css">
       <link rel="stylesheet" href="app/reservations/reservations.css">
       <link rel="stylesheet" href="app/services/services.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/createContractor/createContractor.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/createEvent/createEvent.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageAccounts/manageAccounts.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageContractors/manageContractorModal/manageContractorModal.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageContractors/manageContractors.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageEvent/manageEvent.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageLinks/manageLinks.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/manageLinks/manageLinksModal/manageLinksModal.css">
       <link rel="stylesheet" href="app/superAdmin/partials/superAdminNav/superAdminNav.css">
       <link rel="stylesheet" href="app/superAdmin/partials/updatePictures/updatePictures.css">
       <link rel="stylesheet" href="app/superAdmin/partials/updateTestimonials/updateTestimonials.css">
@@ -124,7 +134,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/customer/customer.js"></script>
+      <script src="app/main/main.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
@@ -163,7 +173,7 @@
       <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
       <script src="app/customer/customer.controller.js"></script>
-      <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/customer/customer.js"></script>
       <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/customer/myEvents/myEvents.js"></script>
       <script src="app/factories/email.factory.js"></script>
@@ -174,7 +184,7 @@
       <script src="app/links/links.js"></script>
       <script src="app/liveGallery/liveGallery.controller.js"></script>
       <script src="app/liveGallery/liveGallery.js"></script>
-      <script src="app/main/main.controller.js"></script>
+      <script src="app/aboutus/aboutus.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/rentals/rentals.controller.js"></script>
       <script src="app/rentals/rentals.js"></script>
@@ -182,6 +192,28 @@
       <script src="app/reservations/reservations.js"></script>
       <script src="app/services/services.controller.js"></script>
       <script src="app/services/services.js"></script>
+      <script src="app/superAdmin/partials/createAccount/createAccount.controller.js"></script>
+      <script src="app/superAdmin/partials/createAccount/createAccount.js"></script>
+      <script src="app/superAdmin/partials/createContractor/createContractor.controller.js"></script>
+      <script src="app/superAdmin/partials/createContractor/createContractor.js"></script>
+      <script src="app/superAdmin/partials/createEvent/createEvent.controller.js"></script>
+      <script src="app/superAdmin/partials/createEvent/createEvent.js"></script>
+      <script src="app/superAdmin/partials/manageAccounts/manageAccounts.controller.js"></script>
+      <script src="app/superAdmin/partials/manageAccounts/manageAccounts.js"></script>
+      <script src="app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.controller.js"></script>
+      <script src="app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.js"></script>
+      <script src="app/superAdmin/partials/manageContractors/manageContractorModal/manageContractorModal.controller.js"></script>
+      <script src="app/superAdmin/partials/manageContractors/manageContractorModal/manageContractorModal.js"></script>
+      <script src="app/superAdmin/partials/manageContractors/manageContractors.controller.js"></script>
+      <script src="app/superAdmin/partials/manageContractors/manageContractors.js"></script>
+      <script src="app/superAdmin/partials/manageEvent/manageEvent.controller.js"></script>
+      <script src="app/superAdmin/partials/manageEvent/manageEvent.js"></script>
+      <script src="app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.controller.js"></script>
+      <script src="app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.js"></script>
+      <script src="app/superAdmin/partials/manageLinks/manageLinks.controller.js"></script>
+      <script src="app/superAdmin/partials/manageLinks/manageLinks.js"></script>
+      <script src="app/superAdmin/partials/manageLinks/manageLinksModal/manageLinksModal.controller.js"></script>
+      <script src="app/superAdmin/partials/manageLinks/manageLinksModal/manageLinksModal.js"></script>
       <script src="app/superAdmin/partials/superAdminContent/superAdminContent.directive.js"></script>
       <script src="app/superAdmin/partials/superAdminNav/superAdminNav.directive.js"></script>
       <script src="app/superAdmin/partials/updatePictures/updatePictures.controller.js"></script>
