--- a/client/index.html
+++ b/client/index.html
@@ -46,8 +46,10 @@
       <link rel="stylesheet" href="app/client/client.css">
       <link rel="stylesheet" href="app/client/partials/clientNav/clientNav.css">
       <link rel="stylesheet" href="app/client/partials/makePayment/makePayment.css">
+      <link rel="stylesheet" href="app/client/partials/viewBudget/viewBudget.css">
       <link rel="stylesheet" href="app/client/partials/welcome/welcome.css">
       <link rel="stylesheet" href="app/client/partials/welcome/welcomeModal/welcomeModal.css">
+      <link rel="stylesheet" href="app/client/partials/yourBudget/yourBudget.css">
       <link rel="stylesheet" href="app/corporate/corporate.css">
       <link rel="stylesheet" href="app/customer/customer.css">
       <link rel="stylesheet" href="app/customer/myEvents/myEvents.css">
@@ -130,7 +132,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/client/partials/welcome/welcomeModal/welcomeModal.js"></script>
+      <script src="app/client/partials/welcome/welcomeModal/welcomeModal.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -172,10 +174,12 @@
       <script src="app/client/partials/clientNav/clientNav.directive.js"></script>
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
       <script src="app/client/partials/makePayment/makePayment.js"></script>
+      <script src="app/client/partials/viewBudget/viewBudget.controller.js"></script>
+      <script src="app/client/partials/viewBudget/viewBudget.js"></script>
       <script src="app/client/partials/welcome/welcome.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.js"></script>
-      <script src="app/client/partials/welcome/welcomeModal/welcomeModal.controller.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/client/partials/welcome/welcomeModal/welcomeModal.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.controller.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
