--- a/client/index.html
+++ b/client/index.html
@@ -99,7 +99,7 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/lodash/lodash.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/d3/d3.js"></script>
@@ -124,7 +124,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/customer/customer.js"></script>
+      <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
@@ -163,8 +163,8 @@
       <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
       <script src="app/customer/customer.controller.js"></script>
+      <script src="app/customer/customer.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
-      <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/customer/myEvents/myEvents.js"></script>
       <script src="app/factories/email.factory.js"></script>
       <script src="app/factories/event.factory.js"></script>
@@ -174,6 +174,8 @@
       <script src="app/links/links.js"></script>
       <script src="app/liveGallery/liveGallery.controller.js"></script>
       <script src="app/liveGallery/liveGallery.js"></script>
+      <script src="app/main/Mongo/JSONtoMongo.js"></script>
+      <script src="app/main/Mongo/textSchema.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/rentals/rentals.controller.js"></script>
