--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,9 @@
       <script src="bower_components/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
       <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
       <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
+      <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDTiE3uowLwUmTscMZYqxVIEGCRiFIPNwo'></script>
       <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
