--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
       <link rel="stylesheet" href="app/client/client.css">
       <link rel="stylesheet" href="app/client/partials/clientNav/clientNav.css">
       <link rel="stylesheet" href="app/client/partials/makePayment/makePayment.css">
+      <link rel="stylesheet" href="app/client/partials/manageGuestList/manageGuestList.css">
       <link rel="stylesheet" href="app/client/partials/welcome/welcome.css">
       <link rel="stylesheet" href="app/corporate/corporate.css">
       <link rel="stylesheet" href="app/customer/customer.css">
@@ -128,7 +129,7 @@
       <script src="app/client/client.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/celebrations/celebrations.js"></script>
+      <script src="app/client/client.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
@@ -169,14 +170,15 @@
       <script src="app/admin/partials/signup/signup.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/celebrations/celebrations.controller.js"></script>
+      <script src="app/celebrations/celebrations.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
-      <script src="app/client/client.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/client/client.router.js"></script>
       <script src="app/client/partials/clientContent/clientContent.directive.js"></script>
       <script src="app/client/partials/clientNav/clientNav.directive.js"></script>
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
       <script src="app/client/partials/makePayment/makePayment.js"></script>
+      <script src="app/client/partials/manageGuestList/manageGuestList.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
@@ -188,6 +190,7 @@
       <script src="app/factories/email.factory.js"></script>
       <script src="app/factories/event.factory.js"></script>
       <script src="app/factories/link.factory.js"></script>
+      <script src="app/factories/payment.factory.js"></script>
       <script src="app/factories/subcontractor.factory.js"></script>
       <script src="app/links/links.controller.js"></script>
       <script src="app/links/links.js"></script>
