testimonial posting to database

--- a/client/index.html
+++ b/client/index.html
@@ -186,6 +186,7 @@
       <script src="app/factories/event.factory.js"></script>
       <script src="app/factories/link.factory.js"></script>
       <script src="app/factories/subcontractor.factory.js"></script>
+      <script src="app/factories/testimonial.factory.js"></script>
       <script src="app/links/links.controller.js"></script>
       <script src="app/links/links.js"></script>
       <script src="app/liveGallery/liveGallery.controller.js"></script>
