working on a functioning testimonial viewer for admin

--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
       <link rel="stylesheet" href="app/admin/partials/manageEvent/manageEventModal/manageEventModal.css">
       <link rel="stylesheet" href="app/admin/partials/manageLinks/manageLinks.css">
       <link rel="stylesheet" href="app/admin/partials/manageLinks/manageLinksModal/manageLinksModal.css">
+      <link rel="stylesheet" href="app/admin/partials/viewTestimonials/viewTestimonials.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/celebrations/celebrations.css">
       <link rel="stylesheet" href="app/client/client.css">
@@ -130,7 +131,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/client/partials/welcome/welcome.controller.js"></script>
+      <script src="app/client/partials/uploadTestimonial/uploadTestimonial.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -162,6 +163,8 @@
       <script src="app/admin/partials/manageLinks/manageLinksModal/manageLinksModal.js"></script>
       <script src="app/admin/partials/signup/signup.controller.js"></script>
       <script src="app/admin/partials/signup/signup.js"></script>
+      <script src="app/admin/partials/viewTestimonials/viewTestimonials.controller.js"></script>
+      <script src="app/admin/partials/viewTestimonials/viewTestimonials.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/celebrations/celebrations.controller.js"></script>
       <script src="app/celebrations/celebrations.js"></script>
@@ -173,8 +176,8 @@
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
       <script src="app/client/partials/makePayment/makePayment.js"></script>
       <script src="app/client/partials/uploadTestimonial/uploadTestimonial.controller.js"></script>
-      <script src="app/client/partials/uploadTestimonial/uploadTestimonial.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/client/partials/welcome/welcome.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
