Most of the backbone for content management for pictures

--- a/client/index.html
+++ b/client/index.html
@@ -115,6 +115,9 @@
       <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
       <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
       <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+      <script src="bower_components/cloudinary-jquery/cloudinary-jquery.js"></script>
+      <script src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
+      <script src="bower_components/cloudinary-jquery-file-upload/cloudinary-jquery-file-upload.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -174,9 +177,8 @@
       <script src="app/links/links.js"></script>
       <script src="app/liveGallery/liveGallery.controller.js"></script>
       <script src="app/liveGallery/liveGallery.js"></script>
-      <script src="app/main/Mongo/JSONtoMongo.js"></script>
-      <script src="app/main/Mongo/textSchema.js"></script>
       <script src="app/main/main.controller.js"></script>
+      <script src="app/main/main.directive.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/rentals/rentals.controller.js"></script>
       <script src="app/rentals/rentals.js"></script>
