--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,8 +10,8 @@ function uploadFile() {
   formData.append("file", file);
   formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
   formData.append("Invalidate",true);
-  formData.append("Overwrite",true);
-  formData.append("public_id","chase");
+  formData.append("public_id","baby_shower");
+
   for (var pair of formData.entries()) {
     console.log(pair[0]+ ', ' + pair[1]); 
 }
@@ -25,13 +25,14 @@ function uploadFile() {
       // Success! You probably want to save the URL somewhere
       var response = JSON.parse(xhr.response);
       var temp = response.secure_url;
-      console.log(temp);
+      console.log(response);
       // https address of uploaded file
     } else {
       alert("Upload failed. Please try agian.");
     }
   }
   xhr.send(formData);
+
 }
 
 </script>
@@ -140,11 +141,13 @@ function uploadFile() {
                             </div>
                         </div>
                     </a>
+                    
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <h4 ng-if="main.isSuperAdmin()"><input type="file" id="file" onchange="uploadFile()" /> </h4>
                     <a href="celebrations" class="portfolio-box">
-                        <img src="http://res.cloudinary.com/dxqqlgb4t/image/upload/chase.jpg" class="img-responsive" alt="">
+                        <!-- <img src="assets/images/homepage/baby_shower.jpg" class="img-responsive" alt=""> -->
+                        <img src="http://res.cloudinary.com/dxqqlgb4t/image/upload/baby_shower.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
