Most of the submission for database is done

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,7 +10,7 @@ function uploadFile() {
   formData.append("file", file);
   formData.append("upload_preset", "i9nq3o8w"); // REQUIRED
   formData.append("Invalidate",true);
-  formData.append("public_id","baby_shower");
+  formData.append("public_id","new_new_test");
 
   for (var pair of formData.entries()) {
     console.log(pair[0]+ ', ' + pair[1]); 
