--- a/client/app/celebrations/celebrations.html
+++ b/client/app/celebrations/celebrations.html
@@ -1,3 +1,15 @@
+<script>
+    function myFunction(button) {
+        var x = document.getElementById("test");
+        if (x.contentEditable == "true") {
+            x.contentEditable = "false";
+            button.innerHTML = "Enable content of p to be editable!";
+        } else {
+            x.contentEditable = "true";
+            button.innerHTML = "Disable content of p to be editable!";
+        }
+    }
+    </script>
 <div id="container">
     <div id="content">
         <div class="container">
@@ -12,7 +24,8 @@
 
                 <div class="project-content col-md-4">
                     <h4><span>Celebrations</span></h4>
-                    <p>At Essence Events, we help plan your lifetime celebrations! Whether you are planning a beautiful baby shower, a memorable graduation, or an astonishing anniversary, we are here to facilitate your every wish!</p>
+                    <button onclick="myFunction(this);">Disable content of p to be editable!</button>
+                    <p id="test" contenteditable="true">At Essence Events, we help plan your lifetime celebrations! Whether you are planning a beautiful baby shower, a memorable graduation, or an astonishing anniversary, we are here to facilitate your every wish!</p>
                     <h4><span>Examples</span></h4>
                     <ul>
                         <li><strong>Baby Shower</strong></li>
