Admin/Super Admin can view/manage the guest lists for events

--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,7 @@
       <link rel="stylesheet" href="app/superAdmin/partials/updatePictures/updatePictures.css">
       <link rel="stylesheet" href="app/superAdmin/partials/updateTestimonials/updateTestimonials.css">
       <link rel="stylesheet" href="app/superAdmin/partials/updateVendors/updateVendors.css">
+      <link rel="stylesheet" href="app/superAdmin/partials/viewGuestList/viewGuestList.css">
       <link rel="stylesheet" href="app/superAdmin/partials/viewTestimonials/viewTestimonials.css">
       <link rel="stylesheet" href="app/superAdmin/superAdmin.css">
       <link rel="stylesheet" href="app/weddings/weddings.css">
@@ -153,7 +154,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/corporate/corporate.js"></script>
+      <script src="app/customer/customer.controller.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -220,8 +221,8 @@
       <script src="app/client/partials/yourBudget/yourBudget.controller.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
+      <script src="app/corporate/corporate.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
-      <script src="app/customer/customer.controller.js"></script>
       <script src="app/customer/customer.js"></script>
       <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/customer/myEvents/myEvents.js"></script>
@@ -273,6 +274,8 @@
       <script src="app/superAdmin/partials/updateTestimonials/updateTestimonials.js"></script>
       <script src="app/superAdmin/partials/updateVendors/updateVendors.controller.js"></script>
       <script src="app/superAdmin/partials/updateVendors/updateVendors.js"></script>
+      <script src="app/superAdmin/partials/viewGuestList/viewGuestList.controller.js"></script>
+      <script src="app/superAdmin/partials/viewGuestList/viewGuestList.js"></script>
       <script src="app/superAdmin/partials/viewTestimonials/viewTestimonials.controller.js"></script>
       <script src="app/superAdmin/partials/viewTestimonials/viewTestimonials.js"></script>
       <script src="app/superAdmin/superAdmin.controller.js"></script>
