getting no where with the posting

--- a/client/index.html
+++ b/client/index.html
@@ -152,7 +152,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/customer/customer.controller.js"></script>
+      <script src="app/corporate/corporate.js"></script>
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -200,6 +200,8 @@
       <script src="app/client/client.router.js"></script>
       <script src="app/client/partials/addGuest/addGuest.controller.js"></script>
       <script src="app/client/partials/addGuest/addGuest.js"></script>
+      <script src="app/client/partials/addGuest/template.js"></script>
+      <script src="app/client/partials/addGuest/upload.js"></script>
       <script src="app/client/partials/clientContent/clientContent.directive.js"></script>
       <script src="app/client/partials/clientNav/clientNav.directive.js"></script>
       <script src="app/client/partials/makePayment/makePayment.controller.js"></script>
@@ -217,8 +219,8 @@
       <script src="app/client/partials/yourBudget/yourBudget.controller.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
-      <script src="app/corporate/corporate.js"></script>
       <script src="app/aboutus/aboutus.js"></script>
+      <script src="app/customer/customer.controller.js"></script>
       <script src="app/customer/customer.js"></script>
       <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/customer/myEvents/myEvents.js"></script>
