Payment works to put in the initial fee

--- a/client/index.html
+++ b/client/index.html
@@ -78,14 +78,7 @@
       <link rel="stylesheet" href="app/superAdmin/partials/manageLinks/manageLinks.css">
       <link rel="stylesheet" href="app/superAdmin/partials/manageLinks/manageLinksModal/manageLinksModal.css">
       <link rel="stylesheet" href="app/superAdmin/partials/superAdminNav/superAdminNav.css">
-
-
-      <link rel="stylesheet" href="app/superAdmin/partials/updatePictures/updatePictures.css">
-      <link rel="stylesheet" href="app/superAdmin/partials/updateTestimonials/updateTestimonials.css">
-      <link rel="stylesheet" href="app/superAdmin/partials/updateVendors/updateVendors.css">
       <link rel="stylesheet" href="app/superAdmin/partials/viewGuestList/viewGuestList.css">
-
-
       <link rel="stylesheet" href="app/superAdmin/partials/viewTestimonials/viewTestimonials.css">
       <link rel="stylesheet" href="app/superAdmin/superAdmin.css">
       <link rel="stylesheet" href="app/weddings/weddings.css">
@@ -131,7 +124,7 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/lodash.js"></script>
+      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/d3/d3.js"></script>
@@ -272,17 +265,8 @@
       <script src="app/superAdmin/partials/manageLinks/manageLinksModal/manageLinksModal.js"></script>
       <script src="app/superAdmin/partials/superAdminContent/superAdminContent.directive.js"></script>
       <script src="app/superAdmin/partials/superAdminNav/superAdminNav.directive.js"></script>
-
-
-      <script src="app/superAdmin/partials/updatePictures/updatePictures.controller.js"></script>
-      <script src="app/superAdmin/partials/updatePictures/updatePictures.js"></script>
-      <script src="app/superAdmin/partials/updateTestimonials/updateTestimonials.controller.js"></script>
-      <script src="app/superAdmin/partials/updateTestimonials/updateTestimonials.js"></script>
-      <script src="app/superAdmin/partials/updateVendors/updateVendors.controller.js"></script>
-      <script src="app/superAdmin/partials/updateVendors/updateVendors.js"></script>
       <script src="app/superAdmin/partials/viewGuestList/viewGuestList.controller.js"></script>
       <script src="app/superAdmin/partials/viewGuestList/viewGuestList.js"></script>
-
       <script src="app/superAdmin/partials/viewTestimonials/viewTestimonials.controller.js"></script>
       <script src="app/superAdmin/partials/viewTestimonials/viewTestimonials.js"></script>
       <script src="app/superAdmin/superAdmin.controller.js"></script>
