Fixed the functionality

--- a/client/index.html
+++ b/client/index.html
@@ -44,9 +44,7 @@
       <link rel="stylesheet" href="app/admin/partials/manageLinks/manageLinksModal/manageLinksModal.css">
       <link rel="stylesheet" href="app/admin/partials/managePayment/managePayment.css">
       <link rel="stylesheet" href="app/admin/partials/managePayment/managePaymentModal/managePaymentModal.css">
-
       <link rel="stylesheet" href="app/admin/partials/viewGuestList/viewGuestList.css">
-
       <link rel="stylesheet" href="app/admin/partials/viewTestimonials/viewTestimonials.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/celebrations/celebrations.css">
@@ -126,7 +124,7 @@
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/lodash.js"></script>
+      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/d3/d3.js"></script>
@@ -153,11 +151,7 @@
       <script src="app/superAdmin/superAdmin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-
-      <script src="app/customer/customer.controller.js"></script>
-
       <script src="app/client/partials/yourBudget/yourBudget.js"></script>
-
       <script src="app/account/login/resetModal/resetModal.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -222,17 +216,10 @@
       <script src="app/client/partials/welcome/welcome.controller.js"></script>
       <script src="app/client/partials/welcome/welcome.js"></script>
       <script src="app/client/partials/yourBudget/yourBudget.controller.js"></script>
-
-      <script src="app/client/partials/yourBudget/yourBudget.js"></script>
-      <script src="app/corporate/corporate.controller.js"></script>
-      <script src="app/corporate/corporate.js"></script>
-      <script src="app/aboutus/aboutus.js"></script>
-
       <script src="app/aboutus/aboutus.js"></script>
       <script src="app/corporate/corporate.controller.js"></script>
       <script src="app/corporate/corporate.js"></script>
       <script src="app/customer/customer.controller.js"></script>
-
       <script src="app/customer/customer.js"></script>
       <script src="app/customer/myEvents/myEvents.controller.js"></script>
       <script src="app/customer/myEvents/myEvents.js"></script>
