--- a/client/app/celebrations/celebrations.html
+++ b/client/app/celebrations/celebrations.html
@@ -16,7 +16,7 @@
 
                     <div ng-init="getText()" class="project-content col-md-4">
                         <h4><span>Celebrations</span></h4>
-                        <button class="btn btn-default" ng-keyup="$textToSubmit.keyCode == 13 && submit()">Submit Changes</button>
+                        <button class="btn btn-default" ng-click="submit('celebrationDescriptText')">Submit Changes</button>
                         <div id="celebrationDescriptText" contenteditable="true">{{literalText}}</div>
                         <br></br>
                         <h4><span>Examples</span></h4>
